--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "test_app"
+    "start": "app.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,11 @@
   "homepage": "https://github.com/erliglesias/test#readme",
   "devDependencies": {
     "pre-commit": "^1.2.2"
+  },
+  "dependencies": {
+    "chai": "^4.1.2",
+    "grunt-jslint": "^1.1.15",
+    "mocha": "^5.2.0",
+    "should": "^13.2.1"
   }
 }
